@@ -1,0 +1,21 @@
+Function: ellisomat
+Section: elliptic_curves
+C-Name: ellisomat
+Prototype: G
+Help: ellisomat(E): E being an elliptic curve over Q, return the list of isogenous curves
+ and the matrix of the degrees of the isogenies between the curves.
+Doc:
+ Given an elliptic curve $E$ defined over $\Q$, return a vector $[L,M]$ where
+ $L$ is the list of curves isogenous to $E$ over $\Q$ and $M$ is the matrix such
+ that $M_{i,j}$ is the degree of the isogeny between $L_i$ and $L_j$.
+ \bprog
+ ? E = ellinit("14a1");
+ ? [L,M]=ellisomat(E);
+ ? L
+ %3 = [[215/48,-5291/864],[-675/16,6831/32],[-8185/48,-742643/864],
+       [-1705/48,-57707/864],[-13635/16,306207/32],[-131065/48,-47449331/864]]
+ ? M
+ %4 = [1,3,3,2,6,6;3,1,9,6,2,18;3,9,1,6,18,2;2,6,6,1,3,3;6,2,18,3,1,9;6,18,2,3,9,1]
+ ? apply(E->ellidentify(ellinit(E))[1][1],L)
+ %5 = ["14a1","14a4","14a3","14a2","14a6","14a5"]
+ @eprog
