@@ -2423,6 +2423,7 @@ GEN ellpadicL(GEN E, GEN p, long n, long r, GEN D, GEN C);
 
 GEN     ellisogenyapply(GEN f, GEN P);
 GEN     ellisogeny(GEN e, GEN G, long only_image, long vx, long vy);
+GEN     ellisomat(GEN E);
 
 /* ellsea.c */
 
