@@ -1,0 +1,51 @@
+-32768:[[[-3391094784, -77986137112576], [-308281344/11, 644513529856/11]], 
+[1, 11; 11, 1]]
+-121:[[[-671187, -827349842], [-726657/11, 790776622/121]], [1, 11; 11, 1]]
+-24729001:[[[-1834698666515187, -30248957012165642720882], [-1273212121107, 
+23777583524178246842/11]], [1, 11; 11, 1]]
+-297756989/2:[[[-265980760639500315/4, -26399516549818699457346725/4], [-339
+8911361078955/68, 176268007111137032032075/1156]], [1, 17; 17, 1]]
+-882216989/131072:[[[-2934366818865244635/17179869184, -10844533632652760514
+83430725/1125899906842624], [-46738850134898235/17179869184, 330587627122507
+28980780475/19140298416324608]], [1, 17; 17, 1]]
+-884736:[[[-2352859840512, -1390483697106419712], [-123834728448/19, 3851755
+393646592/19]], [1, 19; 19, 1]]
+-9317:[[[-308718795, -2273199393850], [-8009035567995/1874161, 8724056049444
+300950/2565726409]], [1, 37; 37, 1]]
+-162677523113838677:[[[-79391929579361394334899981283032555, -86101883061326
+35312849161453546544986342740459589850], [-3060266198643083346534510493755, 
+2243529240012366942346033325954604164449102550]], [1, 37; 37, 1]]
+-884736000:[[[-2348277955559424000, -1385073402076086505832448000], [-546111
+15245568000/43, 749093240711782858752000/43]], [1, 43; 43, 1]]
+-147197952000:[[[-65001711982057095168000, -63787459950504156405289042575360
+00], [-970174805702344704000/67, 1420972598585523644582068224000/67]], [1, 6
+7; 67, 1]]
+-262537412640768000:[[[-206777679108328028700194019213312000, -3619125124330
+9190333816863458093815778056469479424000], [-1268574718456000176074809933824
+000/163, 1362160835684790181558088880202258864769335296000/163]], [1, 163; 1
+63, 1]]
+0:[[[0, 1], [0, -27], [-15, 22], [-135, -594]], [1, 3, 2, 6; 3, 1, 6, 2; 2, 
+6, 1, 3; 6, 2, 3, 1]]
+1728:[[[1, 0], [-4, 0], [-44, 112], [-44, -112]], [1, 2, 4, 4; 2, 1, 2, 2; 4
+, 2, 1, 4; 4, 2, 4, 1]]
+-3375:[[[-51667875, -175774110750], [-878353875, -10019124312750], [-7381125
+/7, 3587226750/7], [-125479125/7, 204471924750/7]], [1, 2, 7, 14; 2, 1, 14, 
+7; 7, 14, 1, 2; 14, 7, 2, 1]]
+8000:[[[-150528000, 629407744000], [-602112000, -5035261952000]], [1, 2; 2, 
+1]]
+54000:[[[-8468064000, 295095094272000], [-76212576000, -7967567545344000], [
+0, 858458456064000], [0, -23178378313728000]], [1, 3, 2, 6; 3, 1, 6, 2; 2, 6
+, 1, 3; 6, 2, 3, 1]]
+287496:[[[-246471470784, 46955772842001408], [-358503957504, 0], [1434015830
+016, 0], [-3943543532544, -3005169461888090112]], [1, 2, 4, 4; 2, 1, 2, 2; 4
+, 2, 1, 4; 4, 2, 4, 1]]
+-12288000:[[[-453048532992000, -3711895494180470784000], [0, -10695540771769
+024512000], [0, 288779600837763661824000], [-330272380551168000, 73061239011
+954206441472000]], [1, 3, 9, 27; 3, 1, 3, 9; 9, 3, 1, 3; 27, 9, 3, 1]]
+16581375:[[[-824740032823875, 9115932407325507114750], [-776225913246000, 10
+235432878400569392000], [-117820004689125/7, -186039436884194022750/7], [-11
+0889416178000/7, -208886385273481008000/7]], [1, 2, 7, 14; 2, 1, 14, 7; 7, 1
+4, 1, 2; 14, 7, 2, 1]]
+[[[-31/3, -2501/108], [-23461/1875, -28748141/1687500], [-1/3, 19/108]], [1,
+ 5, 5; 5, 1, 25; 5, 25, 1]]
+Total time spent: 0
