@@ -1,0 +1,10 @@
+check(V)=
+{
+  for(i=1,#V,
+    print(V[i],":",ellisomat(ellinit(ellfromj(V[i])))));
+}
+
+check([-2^15,-11^2,-11*131^3,-17^2*101^3/2,-17*373^3*2^-17,-96^3,-7*11^3,-7*137^3*2083^3,-960^3,-5280^3,-640320^3])
+check([0,1728,-3375, 8000, 54000, 287496, -12288000, 16581375])
+ellisomat(ellinit([0,-1,1,-10,-20]))
+
